# farrington_manning

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  farrington_manning.py  pyproject.toml  test_farrington_manning.py
.github/workflows/: ci.yml  lint.yml  python-package.yml
docs/: farrington_manning.rst
src/farrington_manning/: __init__.py  _core.py
tests/: test_farrington_manning.py
